@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-# $Id: Template.py,v 1.87 2002/03/26 17:51:23 tavis_rudd Exp $
+# $Id: Template.py,v 1.88 2002/04/06 21:29:33 hierro Exp $
 """Provides the core Template class for Cheetah
 See the docstring in __init__.py and the User's Guide for more information
 
@@ -8,12 +8,12 @@ Meta-Data
 Author: Tavis Rudd <tavis@calrudd.com>
 License: This software is released for unlimited distribution under the
          terms of the Python license.
-Version: $Revision: 1.87 $
+Version: $Revision: 1.88 $
 Start Date: 2001/03/30
-Last Revision Date: $Date: 2002/03/26 17:51:23 $
+Last Revision Date: $Date: 2002/04/06 21:29:33 $
 """ 
 __author__ = "Tavis Rudd <tavis@calrudd.com>"
-__revision__ = "$Revision: 1.87 $"[11:-2]
+__revision__ = "$Revision: 1.88 $"[11:-2]
 
 ##################################################
 ## DEPENDENCIES
@@ -43,7 +43,8 @@ import ErrorCatchers              # for placeholder tags
 import Filters                          # the output filters
 from DummyTransaction import DummyTransaction
 from NameMapper import NotFound, valueFromSearchList, valueForName # this is used in the generated code
-from Utils import VerifyType      # Used in Template.__init__
+from Utils import VerifyType             # Used in Template.__init__
+from Utils.Misc import CheckKeywords     # Used in Template.__init__
 
 ##################################################
 ## CONSTANTS & GLOBALS
@@ -53,6 +54,9 @@ False = (0==1)
 
 VFS = valueFromSearchList
 VFN = valueForName
+
+# All the keyword arguments allowed in the Template constructor.
+LegalKWs = ('_globalSetVars', '_preBuiltSearchList')
 
 ##################################################
 ## CLASSES
@@ -88,7 +92,9 @@ class Template(SettingsManager, Servlet):
         called as a baseclass from a pre-compiled Template servlet."""
         
         ##################################################           
-        ## Verify argument types
+        ## Verify argument keywords and types
+
+	CheckKeywords(KWs, LegalKWs, 'Template constructor argument')
 
         S = types.StringType
         L = types.ListType
