@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-# $Id: Misc.py,v 1.2 2002/03/17 21:03:39 hierro Exp $
+# $Id: Misc.py,v 1.3 2002/04/06 21:29:33 hierro Exp $
 """Miscellaneous functions/objects used by Cheetah but also useful standalone.
 
 Meta-Data
@@ -7,12 +7,12 @@ Meta-Data
 Author: Mike Orr <iron@mso.oz.net>
 License: This software is released for unlimited distribution under the
          terms of the Python license.
-Version: $Revision: 1.2 $
+Version: $Revision: 1.3 $
 Start Date: 2001/11/07
-Last Revision Date: $Date: 2002/03/17 21:03:39 $
+Last Revision Date: $Date: 2002/04/06 21:29:33 $
 """ 
 __author__ = "Mike Orr <iron@mso.oz.net>"
-__revision__ = "$Revision: 1.2 $"[11:-2]
+__revision__ = "$Revision: 1.3 $"[11:-2]
 
 ##################################################
 ## DEPENDENCIES
@@ -34,6 +34,21 @@ def UseOrRaise(thing, errmsg=''):
     if type(thing) == types.ClassType and issubclass(thing, Exception):
         raise thing(errmsg)
     return thing
+
+def CheckKeywords(dic, legalKeywords, what='argument'):
+    """Verify no illegal keyword arguments were passed to a function.
+
+    in : dic, dictionary (**kw in the calling routine).
+         legalKeywords, list of strings, the keywords that are allowed.
+         what, string, suffix for error message (see function source).
+    out: None.
+    exc: TypeError if 'dic' contains a key not in 'legalKeywords'.
+    called by: Cheetah.Template.__init__()
+    """
+    # XXX legalKeywords could be a set when sets get added to Python.
+    for k in dic.keys(): # Can be dic.iterkeys() if Python >= 2.2.
+        if k not in legalKeywords: 
+            raise TypeError("'%s' is not a valid %s" % (k, what))
 
 
 # vim: shiftwidth=4 tabstop=4 expandtab
